--- a/src/pages/management/locations/[location_id]/edit.astro
+++ b/src/pages/management/locations/[location_id]/edit.astro
@@ -38,19 +38,19 @@ if (email !== "admin@coffee.place") {
 
 const response = await fetch("http://localhost:8080/location/" + location_id, {
     method: "GET",
-    headers: {"Content-Type": "application/json"}
-})
+    headers: { "Content-Type": "application/json" },
+});
 
 const location = await response.json();
-    console.log(location)
+console.log(location);
 
 const response2 = await fetch("http://localhost:8080/table/" + location_id, {
-method: "GET",
-headers: {"Content-Type": "application/json"}
-})
+    method: "GET",
+    headers: { "Content-Type": "application/json" },
+});
 
 const tables = await response2.json();
-    console.log(tables)
+console.log(tables);
 
 const location_placeholders = structuredClone(location);
 ---
@@ -152,18 +152,38 @@ const location_placeholders = structuredClone(location);
                 >
             </form>
             <div class="space"></div>
-            <form
-                id="add-table-form"
-                style={"transform:translate(0px, -70px);"}
-            >
-                <button class="center no-margin secondary small" type="submit"
+            <form id="table-form" style={"transform:translate(0px, -70px);"}>
+                <button
+                    id="add-table"
+                    class="center no-margin secondary small"
+                    type="button"
+                    data-ui="#add-table-dialog"
                     ><i>table_restaurant</i>Add a new table</button
                 >
             </form>
         </article>
 
         <div id="blur" class="overlay blur"></div>
-        <dialog id="dialog" class="center middle small-width">
+        <dialog id="add-table-dialog" class="center middle small-width">
+            <form id="add-table-form">
+                <h5 class="center-align bottom-margin">Add</h5>
+                <div class="field label border margin">
+                    <input id="name" name="name" type="text" />
+                    <label for="name">Table name</label>
+                </div>
+                <button class="center no-margin" type="submit">Create</button>
+                <button
+                    type="button"
+                    class="transparent"
+                    data-ui="#add-table-dialog"
+                >
+                    Cancel
+                </button>
+            </form>
+        </dialog>
+
+        <div id="blur" class="overlay blur"></div>
+        <dialog id="remove-table-dialog" class="center middle small-width">
             <form id="remove-table-form">
                 <h5 class="center-align bottom-margin">Removal</h5>
                 <p class="center-align">
@@ -221,9 +241,9 @@ const location_placeholders = structuredClone(location);
                     target.setAttribute("data-y", y);
                 })
                 .on("tap", function (event) {
-                    ui("#dialog");
+                    ui("#remove-table-dialog");
                     const id = event.target.getAttribute("data-id");
-                    const name = event.target.getAttribute("data-name")
+                    const name = event.target.getAttribute("data-name");
                     selected_table_id = id;
                     document.getElementById("form-table-id").innerHTML =
                         `Table ${name}`;
@@ -234,21 +254,23 @@ const location_placeholders = structuredClone(location);
             .getElementById("add-table-form")
             .addEventListener("submit", async (event) => {
                 event.preventDefault();
-                console.log("Added table");
-                // API CALL
+
+                const formData = new FormData(event.target);
 
                 try {
-                    const response = await fetch("http://localhost:8080/table/create/" + location_id + "/" + "Mislav", {
-                        method: "POST",
-                    });
+                    const response = await fetch(
+                        "http://localhost:8080/table/create/" +
+                            location_id +
+                            "/" +
+                            formData.get("name"),
+                        {
+                            method: "POST",
+                        },
+                    );
 
                     if (response.status === 200) {
                         window.location.reload();
                     }
-
-                    // handle error ako ne uspije
-                    //
-                    //
                 } catch (error) {
                     alert(
                         "An unexpected error occurred. Please try again later.",
@@ -260,26 +282,23 @@ const location_placeholders = structuredClone(location);
             .getElementById("remove-table-form")
             .addEventListener("submit", async (event) => {
                 event.preventDefault();
-                console.log("Removed table");
-                // API CALL
 
                 try {
-                    const response = await fetch("http://localhost:8080/table/delete/" + selected_table_id, {
-                        method: "DELETE"
-                    });
+                    const response = await fetch(
+                        "http://localhost:8080/table/delete/" +
+                            selected_table_id,
+                        {
+                            method: "DELETE",
+                        },
+                    );
 
                     if (response.status === 200) {
                         window.location.reload();
                     }
-
-                    // handle error ako ne uspije
-                    //
-                    //
                 } catch (error) {
-                    console.log(error);
-                    // alert(
-                    //     "An unexpected error occurred. Please try again later.",
-                    // );
+                    alert(
+                        "An unexpected error occurred. Please try again later.",
+                    );
                 }
             });
     });
@@ -325,32 +344,35 @@ const location_placeholders = structuredClone(location);
 
             console.log(JSON.stringify(formData));
             var object = {};
-            formData.forEach((value, key) => object[key] = value);
+            formData.forEach((value, key) => (object[key] = value));
             var json = JSON.stringify(object);
-            console.log(json)
-            let response = await fetch("http://localhost:8080/customer/update", {
-                method: "POST",
-                headers: {"Content-Type": "application/json"},
-                body: json
-            })
-            console.log(response)
-
-            for (const table of updatedTables) {
-                let tableResponse = await fetch("http://localhost:8080/table/update/" + table.id + "/" + table.x + "/" + table.y, {
+            console.log(json);
+            let response = await fetch(
+                "http://localhost:8080/customer/update",
+                {
                     method: "POST",
                     headers: { "Content-Type": "application/json" },
                     body: json,
-                });
+                },
+            );
+            console.log(response);
+
+            for (const table of updatedTables) {
+                let tableResponse = await fetch(
+                    "http://localhost:8080/table/update/" +
+                        table.id +
+                        "/" +
+                        table.x +
+                        "/" +
+                        table.y,
+                    {
+                        method: "POST",
+                        headers: { "Content-Type": "application/json" },
+                        body: json,
+                    },
+                );
                 console.log(tableResponse);
             }
-
-            // tables.forEach(table => {
-            //     let response = await fetch("http://localhost:8080/customer/update", {
-            //     method: "POST",
-            //     headers: {"Content-Type": "application/json"},
-            //     body: json
-            // })
-            // });
         });
 </script>
 
